@@ -1,16 +1,18 @@
 package jmri.configurexml;
 
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import jmri.InstanceManager;
+import jmri.jmrit.XmlFile;
 import jmri.jmrit.revhistory.FileHistory;
 import jmri.util.FileUtil;
+import org.jdom2.Attribute;
 import org.jdom2.Document;
 import org.jdom2.Element;
 import org.jdom2.ProcessingInstruction;
@@ -19,10 +21,10 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Provides the mechanisms for storing an entire layout configuration to XML.
- * "Layout" refers to the hardware: Specific communcation systems, etc.
+ * "Layout" refers to the hardware: Specific communication systems, etc.
  *
- * @see <A HREF="package-summary.html">Package summary for details of the
- * overall structure</A>
+ * @see <a href="package-summary.html">Package summary for details of the
+ * overall structure</a>
  * @author Bob Jacobsen Copyright (c) 2002, 2008
  */
 public class ConfigXmlManager extends jmri.jmrit.XmlFile
@@ -30,7 +32,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     /**
      * Define the current schema version string for the layout-config schema.
-     * See the <A HREF="package-summary.html#schema">Schema versioning
+     * See the <a href="package-summary.html#schema">Schema versioning
      * discussion</a>. Also controls the stylesheet file version.
      */
     static final public String schemaVersion = "-2-9-6";
@@ -38,38 +40,41 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
     public ConfigXmlManager() {
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void registerConfig(Object o) {
         registerConfig(o, 50);
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void registerPref(Object o) {
         // skip if already present, leaving in original order
         if (plist.contains(o)) {
             return;
         }
         confirmAdapterAvailable(o);
-
         // and add to list
         plist.add(o);
     }
 
     /**
      * Common check routine to confirm an adapter is available as part of
-     * registration process. Only enabled when Log4J DEBUG level is selected, to
-     * load fewer classes at startup.
+     * registration process.
+     * <p>
+     * Note: Should only be called for debugging purposes, for example, when
+     * Log4J DEBUG level is selected, to load fewer classes at startup.
+     *
+     * @param o object to confirm XML adapter exists for
      */
     void confirmAdapterAvailable(Object o) {
         if (log.isDebugEnabled()) {
             String adapter = adapterName(o);
-            if (log.isDebugEnabled()) {
-                log.debug("register " + o + " adapter " + adapter);
-            }
+            log.debug("register {} adapter {}", o, adapter);
             if (adapter != null) {
                 try {
                     Class.forName(adapter);
-                } catch (ClassNotFoundException ex) {
-                    locateClassFailed(ex, adapter, o);
-                } catch (NoClassDefFoundError ex) {
+                } catch (ClassNotFoundException | NoClassDefFoundError ex) {
                     locateClassFailed(ex, adapter, o);
                 }
             }
@@ -77,73 +82,80 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
     }
 
     /**
-     * Remove the registered preference items. This is used e.g. when a GUI
-     * wants to replace the preferences with new values.
+     * Handles ConfigureXml classes that have moved to a new package or been
+     * superseded.
+     *
+     * @param name name of the moved or superceded ConfigureXml class
+     * @return name of the ConfigureXml class in newer package or of superseding
+     *         class
      */
+    static public String currentClassName(String name) {
+        return InstanceManager.getDefault(ClassMigrationManager.class).getClassName(name);
+    }
+
+    /** {@inheritDoc} */
+    @Override
     public void removePrefItems() {
-        if (log.isDebugEnabled()) {
-            log.debug("removePrefItems dropped " + plist.size());
-        }
+        log.debug("removePrefItems dropped {}", plist.size());
         plist.clear();
     }
 
+    /** {@inheritDoc} */
+    @Override
     public Object findInstance(Class<?> c, int index) {
-        ArrayList<Object> temp = new ArrayList<Object>(plist);
+        List<Object> temp = new ArrayList<>(plist);
         temp.addAll(clist.keySet());
         temp.addAll(tlist);
         temp.addAll(ulist);
         temp.addAll(uplist);
-        for (int i = 0; i < temp.size(); i++) {
-            if (c.isInstance(temp.get(i))) {
+        for (Object o : temp) {
+            if (c.isInstance(o)) {
                 if (index-- == 0) {
-                    return temp.get(i);
+                    return o;
                 }
             }
         }
         return null;
     }
 
-    public ArrayList<Object> getInstanceList(Class<?> c) {
-        ArrayList<Object> temp = new ArrayList<Object>(plist);
-        ArrayList<Object> returnlist = new ArrayList<Object>();
+    /** {@inheritDoc} */
+    @Override
+    public List<Object> getInstanceList(Class<?> c) {
+        List<Object> result = new ArrayList<>();
+
+        List<Object> temp = new ArrayList<>(plist);
         temp.addAll(clist.keySet());
         temp.addAll(tlist);
         temp.addAll(ulist);
         temp.addAll(uplist);
-        for (int i = 0; i < temp.size(); i++) {
-            if (c.isInstance(temp.get(i))) {
-                returnlist.add(temp.get(i));
-                //if (index-- == 0) return temp.get(i);
+        for (Object o : temp) {
+            if (c.isInstance(o)) {
+                result.add(o);
             }
         }
-        if (returnlist.isEmpty()) {
-            return null;
-        }
-        return returnlist;
-
+        return result;
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void registerConfig(Object o, int x) {
         // skip if already present, leaving in original order
         if (clist.containsKey(o)) {
             return;
         }
-
         confirmAdapterAvailable(o);
-
         // and add to list
-        //clist.add(o);
         clist.put(o, x);
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void registerTool(Object o) {
         // skip if already present, leaving in original order
         if (tlist.contains(o)) {
             return;
         }
-
         confirmAdapterAvailable(o);
-
         // and add to list
         tlist.add(o);
     }
@@ -154,30 +166,31 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      *
      * @param o The object, which must have an associated adapter class.
      */
+    @Override
     public void registerUser(Object o) {
         // skip if already present, leaving in original order
         if (ulist.contains(o)) {
             return;
         }
-
         confirmAdapterAvailable(o);
-
         // and add to list
         ulist.add(o);
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void registerUserPrefs(Object o) {
         // skip if already present, leaving in original order
         if (uplist.contains(o)) {
             return;
         }
-
         confirmAdapterAvailable(o);
-
         // and add to list
         uplist.add(o);
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void deregister(Object o) {
         plist.remove(o);
         if (o != null) {
@@ -188,13 +201,12 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         uplist.remove(o);
     }
 
-    ArrayList<Object> plist = new ArrayList<Object>();
-    //Hashtable<Object, Integer> clist = new Hashtable<Object, Integer>();
-    Map<Object, Integer> clist = Collections.synchronizedMap(new LinkedHashMap<Object, Integer>());
-    ArrayList<Object> tlist = new ArrayList<Object>();
-    ArrayList<Object> ulist = new ArrayList<Object>();
-    ArrayList<Object> uplist = new ArrayList<Object>();
-    private ArrayList<Element> loadDeferredList = new ArrayList<Element>();
+    private List<Object> plist = new ArrayList<>();
+    Map<Object, Integer> clist = Collections.synchronizedMap(new LinkedHashMap<>());
+    private List<Object> tlist = new ArrayList<>();
+    private List<Object> ulist = new ArrayList<>();
+    private List<Object> uplist = new ArrayList<>();
+    private final List<Element> loadDeferredList = new ArrayList<>();
 
     /**
      * Find the name of the adapter class for an object.
@@ -204,21 +216,15 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      */
     public static String adapterName(Object o) {
         String className = o.getClass().getName();
-        if (log.isDebugEnabled()) {
-            log.debug("handle object of class " + className);
-        }
+        log.trace("handle object of class {}", className);
         int lastDot = className.lastIndexOf(".");
-        String result = null;
-
         if (lastDot > 0) {
             // found package-class boundary OK
-            result = className.substring(0, lastDot)
+            String result = className.substring(0, lastDot)
                     + ".configurexml."
                     + className.substring(lastDot + 1, className.length())
                     + "Xml";
-            if (log.isDebugEnabled()) {
-                log.debug("adapter class name is " + result);
-            }
+            log.trace("adapter class name is {}", result);
             return result;
         } else {
             // no last dot found!
@@ -230,12 +236,14 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
     /**
      * Handle failure to load adapter class. Although only a one-liner in this
      * class, it is a separate member to facilitate testing.
+     *
+     * @param ex          the exception throw failing to load adapterName as o
+     * @param adapterName name of the adapter class
+     * @param o           adapter object
      */
     void locateClassFailed(Throwable ex, String adapterName, Object o) {
-        log.error(ex.getMessage() + " could not load adapter class " + adapterName);
-        if (log.isDebugEnabled()) {
-            ex.printStackTrace();
-        }
+        log.error("{} could not load adapter class {}", ex, adapterName);
+        log.debug("Stack trace is", ex);
     }
 
     protected Element initStore() {
@@ -259,13 +267,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     protected boolean addConfigStore(Element root) {
         boolean result = true;
-        ArrayList<Map.Entry<Object, Integer>> l = new ArrayList<Map.Entry<Object, Integer>>(clist.entrySet());
-        Collections.sort(l, new Comparator<Map.Entry<Object, Integer>>() {
-
-            public int compare(Map.Entry<Object, Integer> o1, Map.Entry<Object, Integer> o2) {
-                return o1.getValue().compareTo(o2.getValue());
-            }
-        });
+        List<Map.Entry<Object, Integer>> l = new ArrayList<>(clist.entrySet());
+        Collections.sort(l, (Map.Entry<Object, Integer> o1, Map.Entry<Object, Integer> o2) -> o1.getValue().compareTo(o2.getValue()));
         for (int i = 0; i < l.size(); i++) {
             try {
                 Object o = l.get(i).getKey();
@@ -274,8 +277,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                     root.addContent(e);
                 }
             } catch (Exception e) {
-                storingErrorEncountered(null, "storing to file",
-                        "Unknown error (Exception)", null, null, e);
+                storingErrorEncountered(null, "storing to file in addConfigStore",
+                        "Exception thrown", null, null, e);
                 result = false;
             }
         }
@@ -284,8 +287,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     protected boolean addToolsStore(Element root) {
         boolean result = true;
-        for (int i = 0; i < tlist.size(); i++) {
-            Object o = tlist.get(i);
+        for (Object o : tlist) {
             try {
                 Element e = elementFromObject(o);
                 if (e != null) {
@@ -293,8 +295,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                 }
             } catch (Exception e) {
                 result = false;
-                storingErrorEncountered(((XmlAdapter) o), "storing to file",
-                        "Unknown error (Exception)", null, null, e);
+                storingErrorEncountered(null, "storing to file in addToolsStore",
+                        "Exception thrown", null, null, e);
             }
         }
         return result;
@@ -302,8 +304,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     protected boolean addUserStore(Element root) {
         boolean result = true;
-        for (int i = 0; i < ulist.size(); i++) {
-            Object o = ulist.get(i);
+        for (Object o : ulist) {
             try {
                 Element e = elementFromObject(o);
                 if (e != null) {
@@ -311,16 +312,15 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                 }
             } catch (Exception e) {
                 result = false;
-                storingErrorEncountered((XmlAdapter) o, "storing to file",
-                        "Unknown error (Exception)", null, null, e);
+                storingErrorEncountered(null, "storing to file in addUserStore",
+                        "Exception thrown", null, null, e);
             }
         }
         return result;
     }
 
     protected void addUserPrefsStore(Element root) {
-        for (int i = 0; i < uplist.size(); i++) {
-            Object o = uplist.get(i);
+        for (Object o : uplist) {
             Element e = elementFromObject(o);
             if (e != null) {
                 root.addContent(e);
@@ -330,7 +330,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     protected void includeHistory(Element root) {
         // add history to end of document
-        if (InstanceManager.getOptionalDefault(FileHistory.class) != null) {
+        if (InstanceManager.getNullableDefault(FileHistory.class) != null) {
             root.addContent(jmri.jmrit.revhistory.configurexml.FileHistoryXml.storeDirectly(InstanceManager.getDefault(FileHistory.class)));
         }
     }
@@ -342,7 +342,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
             // add XSLT processing instruction
             // <?xml-stylesheet type="text/xsl" href="XSLT/panelfile"+schemaVersion+".xsl"?>
-            java.util.Map<String, String> m = new java.util.HashMap<String, String>();
+            java.util.Map<String, String> m = new java.util.HashMap<>();
             m.put("type", "text/xsl");
             m.put("href", xsltLocation + "panelfile" + schemaVersion + ".xsl");
             ProcessingInstruction p = new ProcessingInstruction("xml-stylesheet", m);
@@ -366,11 +366,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return true;
     }
 
-    /**
-     * Writes config, tools and user to a file.
-     *
-     * @param file config file to write
-     */
+    /** {@inheritDoc} */
+    @Override
     public boolean storeAll(File file) {
         boolean result = true;
         Element root = initStore();
@@ -393,13 +390,14 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
-    /**
-     * Writes prefs to a predefined File location.
-     */
+    /** {@inheritDoc} */
+    @Override
     public void storePrefs() {
         storePrefs(prefsFile);
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void storePrefs(File file) {
         synchronized (this) {
             Element root = initStore();
@@ -408,6 +406,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         }
     }
 
+    /** {@inheritDoc} */
+    @Override
     public void storeUserPrefs(File file) {
         synchronized (this) {
             Element root = initStore();
@@ -421,25 +421,16 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      * <p>
      * File need not exist, but location must be writable when storePrefs()
      * called.
+     *
+     * @param prefsFile new location for preferences file
      */
     public void setPrefsLocation(File prefsFile) {
         this.prefsFile = prefsFile;
     }
     File prefsFile;
 
-    /**
-     * Set location for user preferences file.
-     * <p>
-     * File need not exist, but location must be writable when storePrefs()
-     * called.
-     */
-    /*public void setUserPrefsLocation(File userPrefsFile) { this.userPrefsFile = userPrefsFile; }
-     File userPrefsFile;*/
-    /**
-     * Writes prefs to a file.
-     *
-     * @param file config file to write.
-     */
+    /** {@inheritDoc} */
+    @Override
     public boolean storeConfig(File file) {
         boolean result = true;
         Element root = initStore();
@@ -453,14 +444,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
-    /**
-     * Writes user and config info to a file.
-     * <P>
-     * Config is included here because it doesn't hurt to read it again, and the
-     * user data (typically a panel) requires it to be present first.
-     *
-     * @param file config file to write
-     */
+    /** {@inheritDoc} */
+    @Override
     public boolean storeUser(File file) {
         boolean result = true;
         Element root = initStore();
@@ -477,6 +462,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
+    /** {@inheritDoc} */
+    @Override
     public boolean makeBackup(File file) {
         return makeBackupFile(defaultBackupDirectory, file);
     }
@@ -504,8 +491,9 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         log.debug("store using {}", aName);
         XmlAdapter adapter = null;
         try {
-            adapter = (XmlAdapter) Class.forName(adapterName(object)).newInstance();
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException ex) {
+            adapter = (XmlAdapter) Class.forName(adapterName(object)).getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException 
+                    | NoSuchMethodException | java.lang.reflect.InvocationTargetException ex) {
             log.error("Cannot load configuration adapter for {}", object.getClass().getName(), ex);
         }
         if (adapter != null) {
@@ -520,10 +508,10 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         // add version at front
         root.addContent(0,
                 new Element("jmriversion")
-                .addContent(new Element("major").addContent("" + jmri.Version.major))
-                .addContent(new Element("minor").addContent("" + jmri.Version.minor))
-                .addContent(new Element("test").addContent("" + jmri.Version.test))
-                .addContent(new Element("modifier").addContent(jmri.Version.getModifier()))
+                        .addContent(new Element("major").addContent("" + jmri.Version.major))
+                        .addContent(new Element("minor").addContent("" + jmri.Version.minor))
+                        .addContent(new Element("test").addContent("" + jmri.Version.test))
+                        .addContent(new Element("modifier").addContent(jmri.Version.getModifier()))
         );
     }
 
@@ -533,12 +521,18 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      * Handles problems locally to the extent that it can, by routing them to
      * the creationErrorEncountered method.
      *
+     * @param fi file to load
      * @return true if no problems during the load
+     * @throws jmri.configurexml.JmriConfigureXmlException if unable to load
+     *                                                     file
      */
+    @Override
     public boolean load(File fi) throws JmriConfigureXmlException {
         return load(fi, false);
     }
 
+    /** {@inheritDoc} */
+    @Override
     public boolean load(URL url) throws JmriConfigureXmlException {
         return load(url, false);
     }
@@ -578,86 +572,80 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      */
     @Override
     public boolean load(URL url, boolean registerDeferred) throws JmriConfigureXmlException {
-        // must not use invokeAndWait on Swing thread
-        if (javax.swing.SwingUtilities.isEventDispatchThread()) {
-            // direct exec
-            return loadOnSwingThread(url, registerDeferred);
-        } else {
-            // push to swing
-            final java.util.concurrent.atomic.AtomicReference<Boolean> result = new java.util.concurrent.atomic.AtomicReference<>();
-
-            try {
-                javax.swing.SwingUtilities.invokeAndWait(() -> {
-                    try {
-                        boolean temp = loadOnSwingThread(url, registerDeferred);
-                        result.set(temp);
-                    } catch (JmriConfigureXmlException e) {
-                        throw new RuntimeException(e);
-                    }
-                });
-            } catch (InterruptedException e) {
-                throw new JmriConfigureXmlException(e);
-            } catch (java.lang.reflect.InvocationTargetException e) {
-                throw new JmriConfigureXmlException(e);
+        log.trace("starting load({}, {})", url, registerDeferred);
+        
+        // we do the actual load on the Swing thread in case it changes visible windows
+        Boolean retval = jmri.util.ThreadingUtil.runOnGUIwithReturn(() -> {
+            try { 
+                Boolean ret = loadOnSwingThread(url, registerDeferred);
+                return ret;
+            } catch (Exception e) {
+                log.trace("  ending load() via JmriConfigureXmlException");
+                throw new RuntimeException(e);
             }
-
-            return result.get();
-        }
+        });
+        
+        log.trace("  ending load({}, {} with {})", url, registerDeferred, retval);
+        return retval;
     }
 
-    private boolean loadOnSwingThread(URL url, boolean registerDeferred) throws JmriConfigureXmlException {
+    private XmlFile.Validate validate = XmlFile.Validate.CheckDtdThenSchema;
+
+    /** {@inheritDoc} */
+    @Override
+    public void setValidate(XmlFile.Validate v) {
+        validate = v;
+    }
+
+    /** {@inheritDoc} */
+    @Override
+    public XmlFile.Validate getValidate() {
+        return validate;
+    }
+
+    // must run on GUI thread only; that's ensured at the using level.
+    private Boolean loadOnSwingThread(URL url, boolean registerDeferred) throws JmriConfigureXmlException {
         boolean result = true;
         Element root = null;
         /* We will put all the elements into a load list, along with the load order
          As XML files prior to 2.13.1 had no order to the store, beans would be stored/loaded
          before beans that they were dependant upon had been stored/loaded
          */
-        Map<Element, Integer> loadlist = Collections.synchronizedMap(new LinkedHashMap<Element, Integer>());
+        Map<Element, Integer> loadlist = Collections.synchronizedMap(new LinkedHashMap<>());
 
         try {
+            setValidate(validate);
             root = super.rootFromURL(url);
             // get the objects to load
             List<Element> items = root.getChildren();
-            for (int i = 0; i < items.size(); i++) {
+            for (Element item : items) {
                 //Put things into an ordered list
-                Element item = items.get(i);
-                if (item.getAttribute("class") == null) {
+                Attribute a = item.getAttribute("class");
+                if (a == null) {
                     // this is an element that we're not meant to read
-                    if (log.isDebugEnabled()) {
-                        log.debug("skipping " + item);
-                    }
+                    log.debug("skipping {}", item);
                     continue;
                 }
-                String adapterName = item.getAttribute("class").getValue();
-                if (log.isDebugEnabled()) {
-                    log.debug("attempt to get adapter " + adapterName + " for " + item);
-                }
-                XmlAdapter adapter = null;
-
-                adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                String adapterName = a.getValue();
+                log.debug("attempt to get adapter {} for {}", adapterName, item);
+                adapterName = currentClassName(adapterName);
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 int order = adapter.loadOrder();
-                if (log.isDebugEnabled()) {
-                    log.debug("add " + item + " to load list with order id of " + order);
-                }
+                log.debug("add {} to load list with order id of {}", item, order);
                 loadlist.put(item, order);
             }
 
-            ArrayList<Map.Entry<Element, Integer>> l = new ArrayList<Map.Entry<Element, Integer>>(loadlist.entrySet());
-            Collections.sort(l, new Comparator<Map.Entry<Element, Integer>>() {
+            List<Map.Entry<Element, Integer>> l = new ArrayList<>(loadlist.entrySet());
+            Collections.sort(l, (Map.Entry<Element, Integer> o1, Map.Entry<Element, Integer> o2) -> o1.getValue().compareTo(o2.getValue()));
 
-                public int compare(Map.Entry<Element, Integer> o1, Map.Entry<Element, Integer> o2) {
-                    return o1.getValue().compareTo(o2.getValue());
-                }
-            });
-            for (int i = 0; i < l.size(); i++) {
-                Element item = l.get(i).getKey();
+            for (Map.Entry<Element, Integer> elementIntegerEntry : l) {
+                Element item = elementIntegerEntry.getKey();
                 String adapterName = item.getAttribute("class").getValue();
-                if (log.isDebugEnabled()) {
-                    log.debug("load " + item + " via " + adapterName);
-                }
+                adapterName = currentClassName(adapterName);
+                log.debug("load {} via {}", item, adapterName);
                 XmlAdapter adapter = null;
                 try {
-                    adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
 
                     // get version info
                     // loadVersion(root, adapter);
@@ -665,14 +653,10 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                     if (adapter.loadDeferred() && registerDeferred) {
                         // register in the list for deferred load
                         loadDeferredList.add(item);
-                        if (log.isDebugEnabled()) {
-                            log.debug("deferred load registered for " + item + " " + adapterName);
-                        }
+                        log.debug("deferred load registered for {} {}", item, adapterName);
                     } else {
                         boolean loadStatus = adapter.load(item, item);
-                        if (log.isDebugEnabled()) {
-                            log.debug("load status for " + item + " " + adapterName + " is " + loadStatus);
-                        }
+                        log.debug("load status for {} {} is {}", item, adapterName, loadStatus);
 
                         // if any adaptor load fails, then the entire load has failed
                         if (!loadStatus) {
@@ -680,13 +664,11 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                         }
                     }
                 } catch (Exception e) {
-                    creationErrorEncountered(adapter, "load(" + url.getFile() + ")",
-                            "Unexpected error (Exception)", null, null, e);
+                    creationErrorEncountered(adapter, "load(" + url.getFile() + ")", "Unexpected error (Exception)", null, null, e);
 
                     result = false;  // keep going, but return false to signal problem
                 } catch (Throwable et) {
-                    creationErrorEncountered(adapter, "in load(" + url.getFile() + ")",
-                            "Unexpected error (Throwable)", null, null, et);
+                    creationErrorEncountered(adapter, "in load(" + url.getFile() + ")", "Unexpected error (Throwable)", null, null, et);
 
                     result = false;  // keep going, but return false to signal problem
                 }
@@ -718,79 +700,21 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
             creationErrorEncountered(null, "loading from file " + url.getFile(),
                     "IllegalAccessException", null, null, e);
             result = false;
+        } catch (NoSuchMethodException e) {
+            creationErrorEncountered(null, "loading from file " + url.getFile(),
+                    "NoSuchMethodException", null, null, e);
+            result = false;
+        } catch (java.lang.reflect.InvocationTargetException e) {
+            creationErrorEncountered(null, "loading from file " + url.getFile(),
+                    "InvocationTargetException", null, null, e);
+            result = false;
         } finally {
             // no matter what, close error reporting
             handler.done();
         }
 
-        /*try {
-         root = super.rootFromFile(fi);
-         // get the objects to load
-         List<Element> items = root.getChildren();
-         for (int i = 0; i<items.size(); i++) {
-         // get the class, hence the adapter object to do loading
-         Element item = items.get(i);
-         if (item.getAttribute("class") == null) {
-         // this is an element that we're not meant to read
-         continue;
-         }
-         String adapterName = item.getAttribute("class").getValue();
-         log.debug("load via "+adapterName);
-         XmlAdapter adapter = null;
-                
-         try {
-         adapter = (XmlAdapter)Class.forName(adapterName).newInstance();
-
-         // get version info
-         // loadVersion(root, adapter);
-                    
-         // and do it
-         if (adapter.loadDeferred() && registerDeferred) {
-         // register in the list for deferred load
-         loadDeferredList.add(item);
-         log.debug("deferred load registered for " + adapterName);
-         } else {
-         boolean loadStatus = adapter.load(item);
-         log.debug("load status for "+adapterName+" is "+loadStatus);
-                    
-         // if any adaptor load fails, then the entire load has failed
-         if (!loadStatus)
-         result = false;
-         }
-         } catch (Exception e) {
-         creationErrorEncountered (adapter, "load("+fi.getName()+")",Level.ERROR,
-         "Unexpected error (Exception)",null,null,e);
-                   
-         result = false;  // keep going, but return false to signal problem
-         } catch (Throwable et) {
-         creationErrorEncountered (adapter, "in load("+fi.getName()+")", Level.ERROR,
-         "Unexpected error (Throwable)",null,null,et);
-
-         result = false;  // keep going, but return false to signal problem
-         }
-         }
-
-
-         } catch (java.io.FileNotFoundException e1) {
-         // this returns false to indicate un-success, but not enough
-         // of an error to require a message
-         creationErrorEncountered (null, "opening file "+fi.getName(), Level.ERROR,
-         "File not found", null,null,e1);
-         result = false;
-         } catch (org.jdom2.JDOMException e) {
-         creationErrorEncountered (null, "parsing file "+fi.getName(), Level.ERROR,
-         "Parse error", null,null,e);
-         result = false;
-         } catch (Exception e) {
-         creationErrorEncountered (null, "loading from file "+fi.getName(), Level.ERROR,
-         "Unknown error (Exception)", null,null,e);
-         result = false;
-         } finally {
-         // no matter what, close error reporting
-         handler.done();
-         }*/
         // loading complete, as far as it got, make history entry
-        FileHistory r = InstanceManager.getOptionalDefault(FileHistory.class);
+        FileHistory r = InstanceManager.getNullableDefault(FileHistory.class);
         if (r != null) {
             FileHistory included = null;
             if (root != null) {
@@ -803,29 +727,30 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         } else {
             log.info("Not recording file history");
         }
-
         return result;
     }
 
+    /** {@inheritDoc} */
     @Override
     public boolean loadDeferred(File fi) {
         return this.loadDeferred(FileUtil.fileToURL(fi));
     }
 
+    /** {@inheritDoc} */
     @Override
     public boolean loadDeferred(URL url) {
         boolean result = true;
         // Now process the load-later list
-        log.debug("Start processing deferred load list (size): " + loadDeferredList.size());
+        log.debug("Start processing deferred load list (size): {}", loadDeferredList.size());
         if (!loadDeferredList.isEmpty()) {
             for (Element item : loadDeferredList) {
                 String adapterName = item.getAttribute("class").getValue();
-                log.debug("deferred load via " + adapterName);
+                log.debug("deferred load via {}", adapterName);
                 XmlAdapter adapter = null;
                 try {
-                    adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     boolean loadStatus = adapter.load(item, item);
-                    log.debug("deferred load status for " + adapterName + " is " + loadStatus);
+                    log.debug("deferred load status for {} is {}", adapterName, loadStatus);
 
                     // if any adaptor load fails, then the entire load has failed
                     if (!loadStatus) {
@@ -842,19 +767,18 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                 }
             }
         }
-        log.debug("Done processing deferred load list with result: " + result);
+        log.debug("Done processing deferred load list with result: {}", result);
         return result;
     }
 
     /**
      * Find a file by looking
-     * <UL>
-     * <LI> in xml/layout/ in the preferences directory, if that exists
-     * <LI> in xml/layout/ in the application directory, if that exists
-     * <LI> in xml/ in the preferences directory, if that exists
-     * <LI> in xml/ in the application directory, if that exists
-     * <LI> at top level in the application directory
-     * <LI>
+     * <ul>
+     * <li> in xml/layout/ in the preferences directory, if that exists
+     * <li> in xml/layout/ in the application directory, if that exists
+     * <li> in xml/ in the preferences directory, if that exists
+     * <li> in xml/ in the application directory, if that exists
+     * <li> at top level in the application directory
      * </ul>
      *
      * @param f Local filename, perhaps without path information
@@ -876,15 +800,11 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      * @param f Name of file not located.
      */
     void locateFileFailed(String f) {
-        log.warn("Could not locate file " + f);
+        log.warn("Could not locate file {}", f);
     }
 
     /**
      * Invoke common handling of errors that happen during the "load" process.
-     * <p>
-     * Generally, this is invoked by {@link XmlAdapter} implementations of their
-     * creationErrorEncountered() method (note different arguemments, though).
-     * The standard implemenation of that is in {@link AbstractXmlAdapter}.
      * <p>
      * Exceptions passed into this are absorbed.
      *
@@ -909,16 +829,18 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         ErrorMemo e = new ErrorMemo(
                 adapter, operation, description,
                 systemName, userName, exception, "loading");
-
-        handler.handle(e);
+        if (adapter != null) {
+            ErrorHandler aeh = adapter.getExceptionHandler();
+            if (aeh != null) {
+                aeh.handle(e);
+            }
+        } else {
+            handler.handle(e);
+        }
     }
 
     /**
      * Invoke common handling of errors that happen during the "store" process.
-     * <p>
-     * Generally, this is invoked by {@link XmlAdapter} implementations of their
-     * creationErrorEncountered() method (note different arguemments, though).
-     * The standard implemenation of that is in {@link AbstractXmlAdapter}.
      * <p>
      * Exceptions passed into this are absorbed.
      *
@@ -943,23 +865,30 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         ErrorMemo e = new ErrorMemo(
                 adapter, operation, description,
                 systemName, userName, exception, "storing");
-
-        handler.handle(e);
+        if (adapter != null) {
+            ErrorHandler aeh = adapter.getExceptionHandler();
+            if (aeh != null) {
+                aeh.handle(e);
+            }
+        } else {
+            handler.handle(e);
+        }
     }
 
-    static ErrorHandler handler = new ErrorHandler();
+    private static ErrorHandler handler = new ErrorHandler();
 
     static public void setErrorHandler(ErrorHandler handler) {
         ConfigXmlManager.handler = handler;
     }
 
-    // initialize logging
-    private final static Logger log = LoggerFactory.getLogger(ConfigXmlManager.class.getName());
-
     /**
      * @return the loadDeferredList
      */
-    protected ArrayList<Element> getLoadDeferredList() {
+    protected List<Element> getLoadDeferredList() {
         return loadDeferredList;
     }
+
+    // initialize logging
+    private final static Logger log = LoggerFactory.getLogger(ConfigXmlManager.class);
+
 }
