@@ -5,9 +5,11 @@ import java.awt.Dimension;
 import java.awt.Point;
 import java.util.List;
 import javax.swing.JFrame;
+import jmri.ConfigureManager;
 import jmri.InstanceManager;
 import jmri.configurexml.AbstractXmlAdapter;
 import jmri.configurexml.XmlAdapter;
+import jmri.jmrit.display.PanelMenu;
 import jmri.jmrit.display.Positionable;
 import jmri.jmrit.display.panelEditor.PanelEditor;
 import org.jdom2.Attribute;
@@ -31,6 +33,7 @@ public class PanelEditorXml extends AbstractXmlAdapter {
      * @param o Object to store, of type PanelEditor
      * @return Element containing the complete info
      */
+    @Override
     public Element store(Object o) {
         PanelEditor p = (PanelEditor) o;
         Element panel = new Element("paneleditor");
@@ -48,7 +51,7 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         panel.setAttribute("editable", "" + (p.isEditable() ? "yes" : "no"));
         panel.setAttribute("positionable", "" + (p.allPositionable() ? "yes" : "no"));
         //panel.setAttribute("showcoordinates", ""+(p.showCoordinates()?"yes":"no"));
-        panel.setAttribute("showtooltips", "" + (p.showTooltip() ? "yes" : "no"));
+        panel.setAttribute("showtooltips", "" + (p.showToolTip() ? "yes" : "no"));
         panel.setAttribute("controlling", "" + (p.allControlling() ? "yes" : "no"));
         panel.setAttribute("hide", p.isVisible() ? "no" : "yes");
         panel.setAttribute("panelmenu", p.isPanelMenuVisible() ? "yes" : "no");
@@ -64,17 +67,15 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         if (log.isDebugEnabled()) {
             log.debug("N elements: " + contents.size());
         }
-        for (int i = 0; i < contents.size(); i++) {
-            Positionable sub = contents.get(i);
+        for (Positionable sub : contents) {
             if (sub != null && sub.storeItem()) {
                 try {
                     Element e = jmri.configurexml.ConfigXmlManager.elementFromObject(sub);
                     if (e != null) {
                         panel.addContent(e);
                     }
-                } catch (Exception e) {
-                    log.error("Error storing panel element: " + e);
-                    e.printStackTrace();
+                } catch (RuntimeException e) {
+                    log.error("Error storing panel element", e);
                 }
             }
         }
@@ -82,13 +83,14 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         return panel;
     }
 
+    @Override
     public void load(Element element, Object o) {
         log.error("Invalid method called");
     }
 
     /**
      * Create a PanelEditor object, then register and fill it, then pop it in a
-     * JFrame
+     * JFrame.
      *
      * @param shared Top level Element to unpack.
      * @return true if successful
@@ -96,16 +98,25 @@ public class PanelEditorXml extends AbstractXmlAdapter {
     @Override
     public boolean load(Element shared, Element perNode) {
         boolean result = true;
+        Attribute a;
         // find coordinates
         int x = 0;
         int y = 0;
         int height = 400;
         int width = 300;
         try {
-            x = shared.getAttribute("x").getIntValue();
-            y = shared.getAttribute("y").getIntValue();
-            height = shared.getAttribute("height").getIntValue();
-            width = shared.getAttribute("width").getIntValue();
+            if ((a = shared.getAttribute("x")) != null) {
+                x = a.getIntValue();
+            }
+            if ((a = shared.getAttribute("y")) != null) {
+                y = a.getIntValue();
+            }
+            if ((a = shared.getAttribute("height")) != null) {
+                height = a.getIntValue();
+            }
+            if ((a = shared.getAttribute("width")) != null) {
+                width = a.getIntValue();
+            }
         } catch (org.jdom2.DataConversionException e) {
             log.error("failed to convert PanelEditor's attribute");
             result = false;
@@ -116,21 +127,38 @@ public class PanelEditorXml extends AbstractXmlAdapter {
             name = shared.getAttribute("name").getValue();
         }
         // confirm that panel hasn't already been loaded
-        if (jmri.jmrit.display.PanelMenu.instance().isPanelNameUsed(name)) {
-            log.warn("File contains a panel with the same name (" + name + ") as an existing panel");
+        if (InstanceManager.getDefault(PanelMenu.class).isPanelNameUsed(name)) {
+            log.warn("File contains a panel with the same name ({}) as an existing panel", name);
             result = false;
         }
+
+        // If available, override location and size with machine dependent values
+        if (!InstanceManager.getDefault(apps.gui.GuiLafPreferencesManager.class).isEditorUseOldLocSize()) {
+            jmri.UserPreferencesManager prefsMgr = InstanceManager.getNullableDefault(jmri.UserPreferencesManager.class);
+            if (prefsMgr != null) {
+
+                java.awt.Point prefsWindowLocation = prefsMgr.getWindowLocation(name);
+                if (prefsWindowLocation != null) {
+                    x = (int) prefsWindowLocation.getX();
+                    y = (int) prefsWindowLocation.getY();
+                }
+
+                java.awt.Dimension prefsWindowSize = prefsMgr.getWindowSize(name);
+                if (prefsWindowSize != null && prefsWindowSize.getHeight() != 0 && prefsWindowSize.getWidth() != 0) {
+                    height = (int) prefsWindowSize.getHeight();
+                    width = (int) prefsWindowSize.getWidth();
+                }
+            }
+        }
+
         PanelEditor panel = new PanelEditor(name);
-        //panel.makeFrame(name);
-        jmri.jmrit.display.PanelMenu.instance().addEditorPanel(panel);
+        panel.setTitle();
         panel.getTargetFrame().setLocation(x, y);
         panel.getTargetFrame().setSize(width, height);
+        InstanceManager.getDefault(PanelMenu.class).addEditorPanel(panel);
 
-        panel.setTitle();
-
-        // Load editor option flags. This has to be done before the content 
+        // Load editor option flags. This has to be done before the content
         // items are loaded, to preserve the individual item settings
-        Attribute a;
         boolean value = true;
         if ((a = shared.getAttribute("editable")) != null && a.getValue().equals("no")) {
             value = false;
@@ -153,7 +181,7 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         if ((a = shared.getAttribute("showtooltips")) != null && a.getValue().equals("no")) {
             value = false;
         }
-        panel.setAllShowTooltip(value);
+        panel.setAllShowToolTip(value);
 
         value = true;
         if ((a = shared.getAttribute("controlling")) != null && a.getValue().equals("no")) {
@@ -193,23 +221,22 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         panel.initView();
 
         // load the contents with their individual option settings
-        List<Element> items = shared.getChildren();
-        for (int i = 0; i < items.size(); i++) {
+        List<Element> panelItems = shared.getChildren();
+        for (Element item : panelItems) {
             // get the class, hence the adapter object to do loading
-            Element item = items.get(i);
             String adapterName = item.getAttribute("class").getValue();
-            log.debug("load via " + adapterName);
+            log.debug("load via {}", adapterName);
             try {
-                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 // and do it
                 adapter.load(item, panel);
                 if (!panel.loadOK()) {
                     result = false;
                 }
-            } catch (Exception e) {
-                log.error("Exception while loading " + item.getName() + ":" + e);
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException
+                    | jmri.configurexml.JmriConfigureXmlException | java.lang.reflect.InvocationTargetException e) {
+                log.error("Exception while loading {}", item.getName(), e);
                 result = false;
-                e.printStackTrace();
             }
         }
         panel.disposeLoadData();     // dispose of url correction data
@@ -224,7 +251,10 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         panel.getTargetFrame().setVisible(true);    // always show the panel
 
         // register the resulting panel for later configuration
-        InstanceManager.getOptionalDefault(jmri.ConfigureManager.class).registerUser(panel);
+        ConfigureManager cm = InstanceManager.getNullableDefault(jmri.ConfigureManager.class);
+        if (cm != null) {
+            cm.registerUser(panel);
+        }
 
         // reset the size and position, in case the display caused it to change
         panel.getTargetFrame().setLocation(x, y);
@@ -232,10 +262,11 @@ public class PanelEditorXml extends AbstractXmlAdapter {
         return result;
     }
 
+    @Override
     public int loadOrder() {
         return jmri.Manager.PANELFILES;
     }
 
-    private final static Logger log = LoggerFactory.getLogger(PanelEditorXml.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(PanelEditorXml.class);
 
 }
