@@ -2,15 +2,15 @@ package jmri.jmrix;
 
 import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.ResourceBundle;
 import javax.swing.BorderFactory;
 import javax.swing.BoxLayout;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
+import jmri.ConfigureManager;
 import jmri.InstanceManager;
 import jmri.swing.JTitledSeparator;
 import jmri.swing.PreferencesPanel;
@@ -19,65 +19,43 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Provide GUI to configure communications links.
- * <P>
+ * <p>
  * This is really just a catalog of connections to classes within the systems.
  * Reflection is used to reduce coupling at load time.
- * <P>
+ * <p>
  * Objects of this class are based on an underlying ConnectionConfig
  * implementation, which in turn is obtained from the InstanceManager. Those
  * must be created at load time by the ConfigXml process, or in some Application
  * class.
- * <P>
+ * <p>
  * The classes referenced are the specific subclasses of
  * {@link jmri.jmrix.ConnectionConfig} which provides the methods providing data
  * to the configuration GUI, and responding to its changes.
- * <p>
  *
  * @author Bob Jacobsen Copyright (C) 2001, 2003, 2004, 2010
  */
 public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
-    private static final ResourceBundle acb = ResourceBundle.getBundle("apps.AppsConfigBundle");
-    private boolean isDirty = false;
-
-    /**
-     * Get access to a pane describing existing configuration information, or
-     * create one if needed.
-     * <P>
-     * The index argument is used to connect the new pane to the right
-     * communications info. A value of "1" means the first (primary) port, 2 is
-     * the second, etc.
-     *
-     * @param index 1-N based index of the communications object to configure.
-     * @return a configuration panel for the specified communications object.
-     */
-    public static JmrixConfigPane instance(int index) {
-        JmrixConfigPane retval = configPaneTable.get(index);
-        if (retval != null) {
-            return retval;
-        }
-        return createPanel(index);
-    }
-
-    public static JmrixConfigPane instance(ConnectionConfig config) {
-        for (int key : configPaneTable.keySet()) {
-            if (configPaneTable.get(key).ccCurrent == config) {
-                return configPaneTable.get(key);
-            }
-        }
-        return null;
-    }
+    public static final String NONE_SELECTED = Bundle.getMessage("noneSelected");
+    public static final String NO_PORTS_FOUND = Bundle.getMessage("noPortsFound");
+    public static final String NONE = Bundle.getMessage("none");
+    // initialize logging
+    private final static Logger log = LoggerFactory.getLogger(JmrixConfigPane.class);
 
     /*
      * Create panel is seperated off from the instance and synchronized, so that only
      * one connection can be configured at once, this prevents multiple threads from
      * trying to create the same panel at the same time.
      */
-    private static synchronized JmrixConfigPane createPanel(int index) {
-        JmrixConfigPane retval = configPaneTable.get(Integer.valueOf(index));
-        if (retval != null) {
-            return retval;
-        }
+    /**
+     * Create a new connection configuration panel.
+     *
+     * @param index the index of the desired connection configuration from
+     *              {@link jmri.jmrix.ConnectionConfigManager#getConnections(int)}
+     * @return the panel for the requested connection or for a new connection if
+     *         index did not match an existing connection configuration
+     */
+    public static synchronized JmrixConfigPane createPanel(int index) {
         ConnectionConfig c = null;
         try {
             c = InstanceManager.getDefault(ConnectionConfigManager.class).getConnections(index);
@@ -85,12 +63,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         } catch (IndexOutOfBoundsException ex) {
             log.debug("connection {} is null, creating new one", index);
         }
-        retval = new JmrixConfigPane(c);
-        configPaneTable.put(index, retval);
+        return createPanel(c);
+    }
+
+    /**
+     * Create a new configuration panel for the given connection.
+     *
+     * @param c the connection; if null, the panel is ready for a new connection
+     * @return the new panel
+     */
+    public static synchronized JmrixConfigPane createPanel(ConnectionConfig c) {
+        JmrixConfigPane pane = new JmrixConfigPane(c);
         if (c == null) {
-            retval.isDirty = true;
+            pane.isDirty = true;
         }
-        return retval;
+        return pane;
     }
 
     /**
@@ -99,36 +86,14 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
      * @return a new configuration panel
      */
     public static JmrixConfigPane createNewPanel() {
-
-        int lastIndex = -1;
-        ConnectionConfig[] connections = InstanceManager.getDefault(ConnectionConfigManager.class).getConnections();
-
-        if (connections.length != 0) {
-            lastIndex = connections.length;
-        }
-        for (int key : configPaneTable.keySet()) {
-            if (key > lastIndex) {
-                lastIndex = key;
-            }
-        }
-        lastIndex++;
-        return createPanel(lastIndex);
+        return createPanel(null);
     }
 
-    public static int getNumberOfInstances() {
-        return configPaneTable.size();
-    }
-
-    public static void dispose(int index) {
-        JmrixConfigPane retval = configPaneTable.get(Integer.valueOf(index));
-        if (retval == null) {
-            log.debug("no instance found therefore can not dispose of it!");
-            return;
-        }
-
-        dispose(retval);
-    }
-
+    /**
+     * Disposes of the underlying connection for a configuration pane.
+     *
+     * @param confPane the pane to dispose of
+     */
     public static void dispose(JmrixConfigPane confPane) {
         if (confPane == null) {
             log.debug("no instance found therefore can not dispose of it!");
@@ -138,35 +103,19 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         if (confPane.ccCurrent != null) {
             try {
                 confPane.ccCurrent.dispose();
-            } catch (Exception ex) {
-                log.error("Error Occured while disposing connection {}", ex.toString());
+            } catch (RuntimeException ex) {
+                log.error("Error Occurred while disposing connection {}", ex.toString());
             }
         }
-        InstanceManager.getOptionalDefault(jmri.ConfigureManager.class).deregister(confPane);
-        InstanceManager.getOptionalDefault(jmri.ConfigureManager.class).deregister(confPane.ccCurrent);
+        ConfigureManager cmOD = InstanceManager.getNullableDefault(jmri.ConfigureManager.class);
+        if (cmOD != null) {
+            cmOD.deregister(confPane);
+            cmOD.deregister(confPane.ccCurrent);
+        }
         InstanceManager.getDefault(ConnectionConfigManager.class).remove(confPane.ccCurrent);
-
-        configPaneTable.remove(getInstanceNumber(confPane));
     }
 
-    public static int getInstanceNumber(JmrixConfigPane confPane) {
-        for (int key : configPaneTable.keySet()) {
-            if (configPaneTable.get(key).equals(confPane)) {
-                return key;
-            }
-        }
-        return -1;
-    }
-
-    public static ArrayList<JmrixConfigPane> getListOfConfigPanes() {
-        return new ArrayList<>(configPaneTable.values());
-    }
-
-    static final HashMap<Integer, JmrixConfigPane> configPaneTable = new HashMap<>();
-
-    public static final String NONE_SELECTED = Bundle.getMessage("noneSelected");
-    public static final String NO_PORTS_FOUND = Bundle.getMessage("noPortsFound");
-    public static final String NONE = Bundle.getMessage("none");
+    private boolean isDirty = false;
 
     JComboBox<String> modeBox = new JComboBox<>();
     JComboBox<String> manuBox = new JComboBox<>();
@@ -180,13 +129,16 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
     ConnectionConfig ccCurrent = null;
 
+    protected JmrixConfigPane() {
+    }
+
     /**
      * Use "instance" to get one of these. That allows it to reconnect to
      * existing information in an existing ConnectionConfig object. It's
      * permitted to call this with a null argument, e.g. for when first
      * configuring the system.
      */
-    private JmrixConfigPane(ConnectionConfig original) {
+    protected JmrixConfigPane(ConnectionConfig original) {
 
         ConnectionConfigManager manager = InstanceManager.getDefault(ConnectionConfigManager.class);
         ccCurrent = original;
@@ -235,14 +187,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                         }
                     } else {
                         Class<?> cl = Class.forName(className);
-                        config = (ConnectionConfig) cl.newInstance();
-                        modeBox.addItem(config.name());
+                        config = (ConnectionConfig) cl.getDeclaredConstructor().newInstance();
+                        if( !(config instanceof StreamConnectionConfig)) {
+                           // only include if the connection is not a 
+                           // StreamConnection.  Those connections require
+                           // additional context.
+                           modeBox.addItem(config.name());
+                        } else {
+                               continue;
+                        }
                     }
                     classConnectionList[n++] = config;
                 } catch (NullPointerException e) {
                     log.error("Attempt to load {} failed.", className, e);
-                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-                    log.debug("Attempt to load {} failed: {}.", className, e);
+                } catch (InvocationTargetException | ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
+                    log.error("Attempt to load {} failed: {}.", className, e);
                 }
             }
             if ((modeBox.getSelectedIndex() == 0) && (p.getComboBoxLastSelection((String) manuBox.getSelectedItem()) != null)) {
@@ -252,7 +211,7 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         modeBox.addActionListener((ActionEvent a) -> {
             if ((String) modeBox.getSelectedItem() != null) {
                 if (!((String) modeBox.getSelectedItem()).equals(NONE_SELECTED)) {
-                    p.addComboBoxLastSelection((String) manuBox.getSelectedItem(), (String) modeBox.getSelectedItem());
+                    p.setComboBoxLastSelection((String) manuBox.getSelectedItem(), (String) modeBox.getSelectedItem());
                 }
             }
             selection();
@@ -296,13 +255,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                 try {
                     jmri.jmrix.ConnectionConfig config;
                     Class<?> cl = Class.forName(classConnectionNameList1);
-                    config = (jmri.jmrix.ConnectionConfig) cl.newInstance();
-                    modeBox.addItem(config.name());
+                    config = (jmri.jmrix.ConnectionConfig) cl.getDeclaredConstructor().newInstance();
+                    if( !(config instanceof StreamConnectionConfig)) {
+                        // only include if the connection is not a 
+                        // StreamConnection.  Those connections require
+                        // additional context.
+                        modeBox.addItem(config.name());
+                    } else {
+                        continue;
+                    }
                     classConnectionList[n++] = config;
                     if (classConnectionNameList.length == 1) {
                         modeBox.setSelectedIndex(1);
                     }
-                } catch (NullPointerException | ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                } catch (InvocationTargetException | NullPointerException | ClassNotFoundException 
+                                | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
                     log.warn("Attempt to load {} failed: {}", classConnectionNameList1, e);
                 }
             }
@@ -327,8 +294,8 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                 ccCurrent.dispose();
             }
             ccCurrent = classConnectionList[current];
-            classConnectionList[current].loadDetails(details);
-            classConnectionList[current].setManufacturer((String) manuBox.getSelectedItem());
+            ccCurrent.setManufacturer((String) manuBox.getSelectedItem());
+            ccCurrent.loadDetails(details);
         } else {
             if (ccCurrent != null) {
                 ccCurrent.dispose();
@@ -398,9 +365,6 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         classConnectionList[current].setDisabled(disabled);
     }
 
-    // initialize logging
-    private final static Logger log = LoggerFactory.getLogger(JmrixConfigPane.class);
-
     @Override
     public String getPreferencesItem() {
         return "CONNECTIONS"; // NOI18N
@@ -408,7 +372,7 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
     @Override
     public String getPreferencesItemText() {
-        return acb.getString("MenuConnections"); // NOI18N
+        return Bundle.getMessage("MenuConnections"); // NOI18N
     }
 
     @Override
@@ -470,4 +434,5 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
     public boolean isPreferencesValid() {
         return true; // no validity checking performed
     }
+
 }
