@@ -1,11 +1,13 @@
 package jmri.jmrix.rps;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.File;
 import java.io.IOException;
 import javax.vecmath.Point3d;
 import jmri.CommandStation;
 import jmri.jmrit.roster.Roster;
 import jmri.jmrit.roster.RosterEntry;
+import org.jdom2.JDOMException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -46,14 +48,14 @@ public class Engine implements ReadingListener {
     public void setVSound(double v) {
         double oldVal = vsound;
         vsound = v;
-        log.info("change vsound from " + oldVal + " to " + v);
-        prop.firePropertyChange("vSound", new Double(oldVal), new Double(v));
+        log.info("change vsound from {} to {}", oldVal, v);
+        prop.firePropertyChange("vSound", Double.valueOf(oldVal), Double.valueOf(v));
     }
 
     public double getVSound() {
         return vsound;
     }
-    private double vsound = 0.013544;  // 0.013544 inches/usec, .000345 m/usec, 
+    private double vsound = 0.013544;  // 0.013544 inches/usec, .000345 m/usec,
     private int offset = 0;
 
     public void setOffset(int offset) {
@@ -71,10 +73,9 @@ public class Engine implements ReadingListener {
     /**
      * Set the maximum receiver number expected. If the highest value in the
      * hardware is 5, that's what's needed here.
-     *
      */
     public void setMaxReceiverNumber(int n) {
-        log.debug("setReceiverCount to " + n);
+        log.debug("setReceiverCount to {}", n);
         if ((receivers != null) && (n == receivers.length + 1)) {
             return;
         }
@@ -101,7 +102,7 @@ public class Engine implements ReadingListener {
     }
 
     /**
-     * Get a particular reciever by address (starting at 1)
+     * Get a particular receiver by address (starting at 1).
      */
     public void setReceiver(int address, Receiver receiver) {
         if (receivers == null) {
@@ -110,7 +111,7 @@ public class Engine implements ReadingListener {
         if (address >= receivers.length) {
             throw new IllegalArgumentException("Index " + address + " is larger than expected " + receivers.length);
         }
-        log.debug("store receiver " + address + " in " + this);
+        log.debug("store receiver {} in {}", address, this);
         receivers[address] = receiver;
     }
 
@@ -124,7 +125,7 @@ public class Engine implements ReadingListener {
 
     public Point3d getReceiverPosition(int i) {
         if (receivers[i] == null) {
-            log.debug("getReceiverPosition of null receiver index i=" + i);
+            log.debug("getReceiverPosition of null receiver index i={}", i);
             return null;
         }
         return receivers[i].getPosition();
@@ -140,6 +141,7 @@ public class Engine implements ReadingListener {
 
     String algorithm = "Ash 2.1";  // default value, configured separately
 
+    @Override
     public void notify(Reading r) {
         // This implementation creates a new Calculator
         // each time to ensure that the most recent
@@ -148,10 +150,10 @@ public class Engine implements ReadingListener {
         // to reduce the work done.
 
         // ok to send next poll
-        log.debug("po false " + r.getID());
+        log.debug("po false {}", r.getId());
         pollOutstanding = false;
 
-        // make a list of receiver positions to provide 
+        // make a list of receiver positions to provide
         // to the new Calculator.  Missing/unconfigured receivers
         // are null.
         Point3d list[] = new Point3d[receivers.length];
@@ -164,10 +166,9 @@ public class Engine implements ReadingListener {
 
             Point3d p = getReceiverPosition(i);
             if (p != null) {
-                receivers[i].setLastTime((int) r.getValue(i));  // recievers numbered from 1
-                log.debug("    " + i + "th value min " + receivers[i].getMinTime() + " < time "
-                        + r.getValue(i) + " < max "
-                        + receivers[i].getMaxTime() + " at " + p);
+                receivers[i].setLastTime((int) r.getValue(i));  // receivers numbered from 1
+                log.debug("    {}th value min {} < time {} < max {} at {}",
+                        i, receivers[i].getMinTime(), r.getValue(i), receivers[i].getMaxTime(), p);
                 if (receivers[i].isActive() && (receivers[i].getMinTime() <= r.getValue(i))
                         && (r.getValue(i) <= receivers[i].getMaxTime())) {
                     list[i] = p;
@@ -176,7 +177,7 @@ public class Engine implements ReadingListener {
                 }
             } else {
                 list[i] = null;
-                log.error("Unexpected null position from receiver " + i);
+                log.error("Unexpected null position from receiver {}", i);
             }
         }
 
@@ -185,16 +186,16 @@ public class Engine implements ReadingListener {
 
         Measurement m = c.convert(r, lastPoint);
 
-        saveLastMeasurement(r.getID(), m);
+        saveLastMeasurement(r.getId(), m);
 
         lastPoint = m;
         Distributor.instance().submitMeasurement(m);
     }
 
-    // Store the lastMeasurement 
+    // Store the lastMeasurement
     void saveLastMeasurement(String id, Measurement m) {
         for (int i = 0; i < getNumTransmitters(); i++) {
-            if (getTransmitter(i).getID().equals(id) && getTransmitter(i).isPolled()) {
+            if (getTransmitter(i).getId().equals(id) && getTransmitter(i).isPolled()) {
                 getTransmitter(i).setLastMeasurement(m);
                 // might be more than one, so don't end here
             }
@@ -246,7 +247,7 @@ public class Engine implements ReadingListener {
             min = pf.getReceiverMin(i);
             max = pf.getReceiverMax(i);
 
-            log.debug("load " + i + " with " + p);
+            log.debug("load {} with {}", i, p);
             Receiver r = new Receiver(p);
             r.setActive(a);
             r.setMinTime(min);
@@ -261,7 +262,7 @@ public class Engine implements ReadingListener {
         try {
             loadAlignment(defaultFile);
         } catch (Exception e) {
-            log.debug("load exception" + e);
+            log.debug("load exception ", e);
             // load dummy values
             setDefaultAlignment();
         }
@@ -290,9 +291,9 @@ public class Engine implements ReadingListener {
     public void setPolling(boolean polling) {
         this.polling = polling;
         if (polling) {
-            startpoll();
+            startPoll();
         } else {
-            stoppoll();
+            stopPoll();
         }
     }
 
@@ -305,8 +306,8 @@ public class Engine implements ReadingListener {
     void loadInitialTransmitters() {
         transmitters = new java.util.ArrayList<Transmitter>();
         // load transmitters from the JMRI roster
-        java.util.List<RosterEntry> l = Roster.instance().matchingList(null, null, null, null, null, null, null);
-        log.debug("Got " + l.size() + " roster entries");
+        java.util.List<RosterEntry> l = Roster.getDefault().matchingList(null, null, null, null, null, null, null);
+        log.debug("Got {} roster entries", l.size());
         for (int i = 0; i < l.size(); i++) {
             RosterEntry r = null;
             try {
@@ -315,10 +316,10 @@ public class Engine implements ReadingListener {
                 Transmitter t = new Transmitter(r.getId(), false, address, r.isLongAddress());
                 t.setRosterName(r.getId());
                 transmitters.add(t);
-            } catch (Exception e) {
+            } catch (NumberFormatException e) {
                 // just skip this entry
                 if (r != null) {
-                    log.warn("Skip roster entry: " + r.getId());
+                    log.warn("Skip roster entry: {}", r.getId());
                 } else {
                     log.warn("Failed roster entry skipped");
                 }
@@ -328,8 +329,8 @@ public class Engine implements ReadingListener {
         // load the polling status, custom IDs, etc, from file if possible
         try {
             loadPollConfig(new File(PollingFile.defaultFilename()));
-        } catch (Exception e) {
-            e.printStackTrace();
+        } catch (IOException | JDOMException e) {
+            log.error("Unable to load {}", PollingFile.defaultFilename(), e);
         }
     }
 
@@ -349,7 +350,7 @@ public class Engine implements ReadingListener {
         if (file.exists()) {
             PollingFile pf = new PollingFile();
             pf.loadFile(file);
-            // first make sure transmitters defined      
+            // first make sure transmitters defined
             pf.getTransmitters(this);
             // and possibly start polling
             pf.getPollValues();
@@ -393,7 +394,7 @@ public class Engine implements ReadingListener {
         if (t == null) {
             return "";
         }
-        return t.getID();
+        return t.getId();
     }
 
     public int getPolledAddress() {
@@ -458,17 +459,18 @@ public class Engine implements ReadingListener {
         return !(bscPoll || throttlePoll);
     }
 
-    void startpoll() {
+    void startPoll() {
         // time to start operation
         pollThread = new Thread() {
+            @Override
             public void run() {
                 log.debug("Polling starts");
                 while (true) {
                     try {
                         int i = selectNextPoll();
-                        log.debug("Poll " + i);
+                        log.debug("Poll {}", i);
                         setOn(i);
-                        log.debug("po true " + i);
+                        log.debug("po true {}", i);
                         pollOutstanding = true;
                         synchronized (this) {
                             wait(20);
@@ -494,7 +496,7 @@ public class Engine implements ReadingListener {
 
     /**
      * Wait before sending next poll.
-     * <P>
+     * <p>
      * Waits specified time, and then checks to see if response has been
      * returned. If not, it waits again (twice) by 1/2 the interval, then
      * finally polls anyway.
@@ -518,7 +520,7 @@ public class Engine implements ReadingListener {
         }
     }
 
-    void stoppoll() {
+    void stopPoll() {
         if (pollThread != null) {
             pollThread.interrupt();
         }
@@ -532,7 +534,7 @@ public class Engine implements ReadingListener {
             packet = jmri.NmraPacket.threeBytePacket(
                     t.getAddress(), t.isLongAddress(),
                     (byte) 0xC0, (byte) 0xA5, (byte) 0xFE);
-            if (jmri.InstanceManager.getOptionalDefault(CommandStation.class) != null) {
+            if (jmri.InstanceManager.getNullableDefault(CommandStation.class) != null) {
                 jmri.InstanceManager.getDefault(CommandStation.class).sendPacket(packet, 1);
             }
         } else {
@@ -550,7 +552,7 @@ public class Engine implements ReadingListener {
                 packet = jmri.NmraPacket.function0Through4Packet(
                         t.getAddress(), t.isLongAddress(),
                         false, false, true, false, false);
-                if (jmri.InstanceManager.getOptionalDefault(CommandStation.class) != null) {
+                if (jmri.InstanceManager.getNullableDefault(CommandStation.class) != null) {
                     jmri.InstanceManager.getDefault(CommandStation.class).sendPacket(packet, 1);
                 }
             }
@@ -574,7 +576,7 @@ public class Engine implements ReadingListener {
                 byte[] packet = jmri.NmraPacket.function0Through4Packet(
                         t.getAddress(), t.isLongAddress(),
                         false, false, false, false, false);
-                if (jmri.InstanceManager.getOptionalDefault(CommandStation.class) != null) {
+                if (jmri.InstanceManager.getNullableDefault(CommandStation.class) != null) {
                     jmri.InstanceManager.getDefault(CommandStation.class).sendPacket(packet, 1);
                 }
             }
@@ -582,10 +584,10 @@ public class Engine implements ReadingListener {
     }
 
     // for now, we only allow one Engine
-    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "MS_PKGPROTECT") // for tests
+    @SuppressFBWarnings(value = "MS_PKGPROTECT") // for tests
     static volatile protected Engine _instance = null;
 
-    @edu.umd.cs.findbugs.annotations.SuppressFBWarnings(value = "LI_LAZY_INIT_UPDATE_STATIC") // see comment in method
+    @SuppressFBWarnings(value = "LI_LAZY_INIT_UPDATE_STATIC") // see comment in method
     static public Engine instance() {
         if (_instance == null) {
             // NOTE: _instance has to be initialized before loadValues()
@@ -607,5 +609,6 @@ public class Engine implements ReadingListener {
         prop.addPropertyChangeListener(p);
     }
 
-    private final static Logger log = LoggerFactory.getLogger(Engine.class.getName());
+    private final static Logger log = LoggerFactory.getLogger(Engine.class);
+
 }
